<resources>
    <string name="app_name">Swift Grader</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="button_text_1">1</string>
    <string name="button_text_2">2</string>
    <string name="button_text_3">3</string>
    <string name="button_text_clear">C</string>
    <string name="button_text_4">4</string>
    <string name="button_text_5">5</string>
    <string name="button_text_6">6</string>
    <string name="button_text_7">7</string>
    <string name="button_text_8">8</string>
    <string name="button_text_9">9</string>
    <string name="button_text_10">10</string>
    <string name="button_text_0">0</string>
    <string name="button_text_csv">Rate Us</string>
    <string name="button_text_save">Save</string>
    <string name="label_history">History</string>
    <string name="save_to">Save to</string>
</resources>
