<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp"
    android:background="@color/background"
    tools:context="com.raimikarim.additioncalculator.AdditionActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/label_history"/>
    <TextView
        android:id="@+id/history_box"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/label_history"
        app:layout_constraintBottom_toTopOf="@+id/buttons_view"
        app:layout_constraintLeft_toLeftOf="@id/container"
        android:layout_width="wrap_content"
        android:minWidth="180dp"
        android:layout_height="0dp"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="monospace"
        android:fadeScrollbars="false"
        android:focusable="true"
        android:gravity="bottom"
        android:isScrollContainer="true"
        android:scrollbars="vertical"/>
    <TextView
        android:id="@+id/sumbox"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintRight_toRightOf="@id/container"
        app:layout_constraintBottom_toTopOf="@id/buttons_view"
        android:gravity="bottom|right"
        android:padding="16dp"
        android:paddingRight="16dp"
        android:text="17"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttons_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_1"
                style="@style/ButtonStyle"
                android:text="@string/button_text_1"/>
            <Button
                android:id="@+id/button_2"
                style="@style/ButtonStyle"
                android:text="@string/button_text_2"/>
            <Button
                android:id="@+id/button_3"
                style="@style/ButtonStyle"
                android:text="@string/button_text_3"/>
            <Button
                android:id="@+id/button_clear"
                style="@style/ButtonStyle"
                android:textStyle="bold"
                android:background="@drawable/button_rounded_orange"
                android:text="@string/button_text_clear"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_4"
                style="@style/ButtonStyle"
                android:text="@string/button_text_4"/>
            <Button
                android:id="@+id/button_5"
                style="@style/ButtonStyle"
                android:text="@string/button_text_5"/>
            <Button
                android:id="@+id/button_6"
                style="@style/ButtonStyle"
                android:text="@string/button_text_6"/>
            <Button
                android:id="@+id/button_back"
                style="@style/ButtonStyle"
                android:text="undo"
                android:textSize="16sp"
                android:background="@drawable/button_rounded_orange"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_7"
                style="@style/ButtonStyle"
                android:text="@string/button_text_7"/>
            <Button
                android:id="@+id/button_8"
                style="@style/ButtonStyle"
                android:text="@string/button_text_8"/>
            <Button
                android:id="@+id/button_9"
                style="@style/ButtonStyle"
                android:text="@string/button_text_9"/>
            <Button
                android:id="@+id/button_save"
                style="@style/ButtonStyle"
                android:background="@drawable/button_rounded_green"
                android:textSize="16sp"
                android:text="@string/button_text_save"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_10"
                style="@style/ButtonStyle"
                android:text="@string/button_text_10"/>
            <Button
                android:id="@+id/button_0"
                style="@style/ButtonStyle"
                android:text="@string/button_text_0" />
            <Button
                android:id="@+id/button_help"
                style="@style/ButtonStyle"
                android:background="@drawable/button_rounded_grey"
                android:text="\?"/>
            <Button
                android:id="@+id/button_csv"
                style="@style/ButtonStyle"
                android:background="@drawable/button_rounded_grey"
                android:textSize="16sp"
                android:text="@string/button_text_csv" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
